--- a/index.html
+++ b/index.html
@@ -87,68 +87,70 @@
           <p class="advantage-info paragraph-style-reset">Большинство едет в&nbsp;гранд каньон и&nbsp;толпится там</p>
         </li>
       </ul>
-      <div class="interest-wrapper">
+      <section class="modal">
         <h2 class="interest">Заинтересовались?</h2>
         <p class="interest-info paragraph-style-reset">Укажите предполагаемые даты поездки,<br> и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;седоне</p>
-      </div>
-      <section class="modal">
-        <button class="button-modal button-brown button search-button">Поиск гостиницы в&nbsp;Седоне</button>
-        <h3 class="visually-hidden">Форма поиска гостиницы</h3>
-        <form class="book-form" action="https://echo.htmlacademy.ru" method="post">
-          <p class="paragraph-book paragraph-style-reset">
-            <label for="book-arrival">Дата заезда:</label>
-            <input class="book-date book-arrival-pos" id="book-arrival" type="text" name="arrival-date" placeholder="24 апреля 2017" autocomplete="off">
-            <button class="calendar-button" type="button">
-              <svg class="calendar" fill="#cacaca" enable-background="new 0 0 21 22" height="22" viewBox="0 0 21 22" width="21" xmlns="http://www.w3.org/2000/svg">
-                <path d="m19.251 2.025h-2.845v-1.377c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938v-1.377c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377h-3.938v-1.377c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377h-2.843c-.966 0-1.75.822-1.75 1.837v16.302c0 1.015.784 1.836 1.75 1.836h17.501c.966 0 1.749-.821 1.749-1.836v-16.302c0-1.015-.783-1.837-1.749-1.837zm.437 18.139c0 .253-.195.459-.437.459h-17.501c-.241 0-.438-.206-.438-.459v-16.302c0-.253.196-.459.438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689v-1.378h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689v-1.378h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689v-1.378h2.845c.241 0 .437.206.437.459v16.302z"/>
-                <path d="m4.594 8.225h2.625v2.066h-2.625z"/>
-                <path d="m4.594 11.668h2.625v2.067h-2.625z"/>
-                <path d="m4.594 15.112h2.625v2.066h-2.625z"/>
-                <path d="m9.188 15.112h2.625v2.066h-2.625z"/>
-                <path d="m9.188 11.668h2.625v2.067h-2.625z"/>
-                <path d="m9.188 8.225h2.625v2.066h-2.625z"/>
-                <path d="m13.781 15.112h2.625v2.066h-2.625z"/>
-                <path d="m13.781 11.668h2.625v2.067h-2.625z"/>
-                <path d="m13.781 8.225h2.625v2.066h-2.625z"/>
-              </svg>
-            </button>
-          </p>
-          <p class="paragraph-book paragraph-style-reset">
-            <label for="book-departure">Дата выезда:</label>
-            <input class="book-date book-departure-pos" id="book-departure" type="text" name="departure-date" placeholder="4 июля 2017" autocomplete="off">
-            <button class="calendar-button" type="button">
-              <svg class="calendar" fill="#cacaca" enable-background="new 0 0 21 22" height="22" viewBox="0 0 21 22" width="21" xmlns="http://www.w3.org/2000/svg">
-                <path d="m19.251 2.025h-2.845v-1.377c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938v-1.377c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377h-3.938v-1.377c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377h-2.843c-.966 0-1.75.822-1.75 1.837v16.302c0 1.015.784 1.836 1.75 1.836h17.501c.966 0 1.749-.821 1.749-1.836v-16.302c0-1.015-.783-1.837-1.749-1.837zm.437 18.139c0 .253-.195.459-.437.459h-17.501c-.241 0-.438-.206-.438-.459v-16.302c0-.253.196-.459.438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689v-1.378h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689v-1.378h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689v-1.378h2.845c.241 0 .437.206.437.459v16.302z"/>
-                <path d="m4.594 8.225h2.625v2.066h-2.625z"/>
-                <path d="m4.594 11.668h2.625v2.067h-2.625z"/>
-                <path d="m4.594 15.112h2.625v2.066h-2.625z"/>
-                <path d="m9.188 15.112h2.625v2.066h-2.625z"/>
-                <path d="m9.188 11.668h2.625v2.067h-2.625z"/>
-                <path d="m9.188 8.225h2.625v2.066h-2.625z"/>
-                <path d="m13.781 15.112h2.625v2.066h-2.625z"/>
-                <path d="m13.781 11.668h2.625v2.067h-2.625z"/>
-                <path d="m13.781 8.225h2.625v2.066h-2.625z"/>
-              </svg>
-            </button>
-          </p>
-          <div class="people-num-wrapper">
-            <p class="adult-wrapper paragraph-style-reset">
-              <label class="adult-label-wrapper" for="book-adults-num">Взрослые:</label>
-              <button class="minus" type="button"><span class="visually-hidden">Уменьшить</span></button>
-              <input class="book-date container-children" id="book-adults-num" type="text" name="adults-num" placeholder= "2" autocomplete="off">
-              <button class="plus" type="button"><span class="visually-hidden">Увеличить</span></button>
-            </p>
-            <p class="children-wrapper paragraph-style-reset">
-              <label class="children-num-pos" for="book-children-num">Дети:</label>
-              <button class="minus" type="button"><span class="visually-hidden">Уменьшить</span></button>
-              <input class="book-date container-children container-children-pos" id="book-children-num" type="text" name= "children-num" placeholder="0" autocomplete="off">
-              <button class="plus" type="button"><span class="visually-hidden">Увеличить</span></button>
-            </p>
-          </div>
-          <div class="button-find-wrapper">
-            <button class="button-modal button-blue button" type="submit">Найти</button>
-          </div>
-        </form>
+        <div class="btn-form-wrapper">
+          <button class="button-modal button-brown button search-button">Поиск гостиницы в&nbsp;Седоне</button>
+          <h3 class="visually-hidden">Форма поиска гостиницы</h3>
+          <form class="book-form" action="https://echo.htmlacademy.ru" method="post">
+            <div class="form-content">
+              <p class="paragraph-book paragraph-style-reset">
+                <label for="book-arrival">Дата заезда:</label>
+                <input class="book-date book-arrival-pos" id="book-arrival" type="text" name="arrival-date" placeholder="24 апреля 2017" autocomplete="off">
+                <button class="calendar-button" type="button">
+                  <svg class="calendar" fill="#cacaca" enable-background="new 0 0 21 22" height="22" viewBox="0 0 21 22" width="21" xmlns="http://www.w3.org/2000/svg">
+                    <path d="m19.251 2.025h-2.845v-1.377c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938v-1.377c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377h-3.938v-1.377c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377h-2.843c-.966 0-1.75.822-1.75 1.837v16.302c0 1.015.784 1.836 1.75 1.836h17.501c.966 0 1.749-.821 1.749-1.836v-16.302c0-1.015-.783-1.837-1.749-1.837zm.437 18.139c0 .253-.195.459-.437.459h-17.501c-.241 0-.438-.206-.438-.459v-16.302c0-.253.196-.459.438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689v-1.378h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689v-1.378h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689v-1.378h2.845c.241 0 .437.206.437.459v16.302z"/>
+                    <path d="m4.594 8.225h2.625v2.066h-2.625z"/>
+                    <path d="m4.594 11.668h2.625v2.067h-2.625z"/>
+                    <path d="m4.594 15.112h2.625v2.066h-2.625z"/>
+                    <path d="m9.188 15.112h2.625v2.066h-2.625z"/>
+                    <path d="m9.188 11.668h2.625v2.067h-2.625z"/>
+                    <path d="m9.188 8.225h2.625v2.066h-2.625z"/>
+                    <path d="m13.781 15.112h2.625v2.066h-2.625z"/>
+                    <path d="m13.781 11.668h2.625v2.067h-2.625z"/>
+                    <path d="m13.781 8.225h2.625v2.066h-2.625z"/>
+                  </svg>
+                </button>
+              </p>
+              <p class="paragraph-book paragraph-style-reset">
+                <label for="book-departure">Дата выезда:</label>
+                <input class="book-date book-departure-pos" id="book-departure" type="text" name="departure-date" placeholder="4 июля 2017" autocomplete="off">
+                <button class="calendar-button" type="button">
+                  <svg class="calendar" fill="#cacaca" enable-background="new 0 0 21 22" height="22" viewBox="0 0 21 22" width="21" xmlns="http://www.w3.org/2000/svg">
+                    <path d="m19.251 2.025h-2.845v-1.377c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938v-1.377c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377h-3.938v-1.377c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377h-2.843c-.966 0-1.75.822-1.75 1.837v16.302c0 1.015.784 1.836 1.75 1.836h17.501c.966 0 1.749-.821 1.749-1.836v-16.302c0-1.015-.783-1.837-1.749-1.837zm.437 18.139c0 .253-.195.459-.437.459h-17.501c-.241 0-.438-.206-.438-.459v-16.302c0-.253.196-.459.438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689v-1.378h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689v-1.378h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689v-1.378h2.845c.241 0 .437.206.437.459v16.302z"/>
+                    <path d="m4.594 8.225h2.625v2.066h-2.625z"/>
+                    <path d="m4.594 11.668h2.625v2.067h-2.625z"/>
+                    <path d="m4.594 15.112h2.625v2.066h-2.625z"/>
+                    <path d="m9.188 15.112h2.625v2.066h-2.625z"/>
+                    <path d="m9.188 11.668h2.625v2.067h-2.625z"/>
+                    <path d="m9.188 8.225h2.625v2.066h-2.625z"/>
+                    <path d="m13.781 15.112h2.625v2.066h-2.625z"/>
+                    <path d="m13.781 11.668h2.625v2.067h-2.625z"/>
+                    <path d="m13.781 8.225h2.625v2.066h-2.625z"/>
+                  </svg>
+                </button>
+              </p>
+              <div class="people-num-wrapper">
+                <p class="adult-wrapper paragraph-style-reset">
+                  <label class="adult-label-wrapper" for="book-adults-num">Взрослые:</label>
+                  <button class="minus" type="button"><span class="visually-hidden">Уменьшить</span></button>
+                  <input class="book-date container-children" id="book-adults-num" type="text" name="adults-num" placeholder= "2" autocomplete="off">
+                  <button class="plus" type="button"><span class="visually-hidden">Увеличить</span></button>
+                </p>
+                <p class="children-wrapper paragraph-style-reset">
+                  <label class="children-num-pos" for="book-children-num">Дети:</label>
+                  <button class="minus" type="button"><span class="visually-hidden">Уменьшить</span></button>
+                  <input class="book-date container-children container-children-pos" id="book-children-num" type="text" name= "children-num" placeholder="0" autocomplete="off">
+                  <button class="plus" type="button"><span class="visually-hidden">Увеличить</span></button>
+                </p>
+              </div>
+              <div class="button-find-wrapper">
+                <button class="button-modal button-blue button" type="submit">Найти</button>
+              </div>
+            </div>
+          </form>
+        </div>
       </section>
       <img class="map" src="img/map.jpg" width="1200" height="593" alt="Расположение на карте">
     </main>
@@ -179,24 +181,6 @@
         </a>
       </p>
     </footer>
-    <script>
-      var link = document.querySelector(".search-button");
-
-      var popup = document.querySelector(".book-form");
-
-      var focus = popup.querySelector("[name=arrival-date]");
-
-      link.addEventListener("click", function (evt) {
-        evt.preventDefault();
-        if (popup.classList.contains("modal-show")) {
-          popup.classList.remove("modal-show");
-          popup.classList.add("modal-hide");
-        }else {
-          popup.classList.add("modal-show");
-          popup.classList.remove("modal-hide");
-        }
-        focus.focus();
-      });
-    </script>
+    <script src="js/script.js"></script>
   </body>
 </html>
