--- a/catalog.html
+++ b/catalog.html
@@ -33,38 +33,38 @@
       <h2 class="visually-hidden">Фильтр гостиниц</h2>
       <form class="content-filter" action="https://echo.htmlacademy.ru" method="get">
         <fieldset>
+          <legend class="filter-header">Инфраструктура:</legend>
           <div class="checkbox-filter-wrapper">
-            <legend class="filter-header">Инфраструктура:</legend>
             <ul class="list-style options-list">
               <li>
-                <input class="visually-hidden option" id="filter-pool" type="checkbox" name="pool" autocomplete="off" checked>
+                <input class="visually-hidden option" id="filter-pool" type="checkbox" name="pool" checked>
                 <label for="filter-pool">Бассейн</label>
               </li>
               <li>
-                <input class="visually-hidden option" id="filter-parking" type="checkbox" name="parking" autocomplete="off">
+                <input class="visually-hidden option" id="filter-parking" type="checkbox" name="parking">
                 <label for="filter-parking">Парковка</label>
               </li>
               <li>
-                <input class="visually-hidden option" id="filter-wi-fi" type="checkbox" name="wi-fi" autocomplete="off">
+                <input class="visually-hidden option" id="filter-wi-fi" type="checkbox" name="wi-fi">
                 <label for="filter-wi-fi">Wi-Fi</label>
               </li>
             </ul>
           </div>
         </fieldset>
         <fieldset>
+          <legend class="filter-header">Тип жилья:</legend>
           <div class="checkbox-filter-wrapper">
-            <legend class="filter-header">Тип жилья:</legend>
             <ul class="list-style options-list">
               <li>
-                <input class="visually-hidden option" id="filter-hotel" type="checkbox" name="hotel" autocomplete="off" checked>
+                <input class="visually-hidden option" id="filter-hotel" type="checkbox" name="hotel" checked>
                 <label for="filter-hotel">Гостиница</label>
               </li>
               <li>
-                <input class="visually-hidden option" id="filter-motel" type="checkbox" name="motel" autocomplete="off" checked>
+                <input class="visually-hidden option" id="filter-motel" type="checkbox" name="motel" checked>
                 <label for="filter-motel">Мотель</label>
               </li>
               <li>
-                <input class="visually-hidden option" id="filter-apartments" type="checkbox" name="apartments" autocomplete="off" checked>
+                <input class="visually-hidden option" id="filter-apartments" type="checkbox" name="apartments" checked>
                 <label for="filter-apartments">Апартаменты</label>
               </li>
             </ul>
@@ -148,9 +148,9 @@
               <div class="rating-wrapper">
                 <p class="star-rating paragraph-style-reset">
                   <img width="18" height="17" src="img/star.svg" alt="Рейтинг жилья 4 из 5">
-                  <img width="18" height="17" src="img/star.svg">
-                  <img width="18" height="17" src="img/star.svg">
-                  <img width="18" height="17" src="img/star.svg">
+                  <img width="18" height="17" src="img/star.svg" alt="">
+                  <img width="18" height="17" src="img/star.svg" alt="">
+                  <img width="18" height="17" src="img/star.svg" alt="">
                 </p>
                 <span class="item-rating">Рейтинг: 8,5</span>
               </div>
@@ -179,8 +179,8 @@
               <div class="rating-wrapper">
                 <p class="star-rating paragraph-style-reset">
                   <img width="18" height="17" src="img/star.svg" alt="Рейтинг жилья 3 из 5">
-                  <img width="18" height="17" src="img/star.svg">
-                  <img width="18" height="17" src="img/star.svg">
+                  <img width="18" height="17" src="img/star.svg" alt="">
+                  <img width="18" height="17" src="img/star.svg" alt="">
                 </p>
                 <span class="item-rating">Рейтинг: 8,9</span>
               </div>
@@ -209,7 +209,7 @@
               <div class="rating-wrapper">
                 <p class="star-rating paragraph-style-reset">
                   <img width="18" height="17" src="img/star.svg" alt="Рейтинг жилья 2 из 5">
-                  <img width="18" height="17" src="img/star.svg">
+                  <img width="18" height="17" src="img/star.svg" alt="">
                 </p>
                 <span class="item-rating">Рейтинг: 9,2</span>
               </div>
