--- a/index.html
+++ b/index.html
@@ -151,7 +151,9 @@
           </form>
         </div>
       </section>
-      <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d307924.1514784147!2d-112.13096444582592!3d34.88183298745064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1553113315698" width="1200" height="593" allowfullscreen></iframe>
+      <div class="map-wrapper">
+        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d307924.1514784147!2d-112.13096444582592!3d34.88183298745064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1553113315698" width="1200" height="593" allowfullscreen></iframe>
+      </div>
     </main>
     <footer class="main-footer index-footer container">
       <div class="social-hashtag-wrapper">
